[BUGFIX] Selectbox force white background color on Firefox - Ubuntu 14.04

--- a/Resources/Private/Styles/_Forms.scss
+++ b/Resources/Private/Styles/_Forms.scss
@@ -103,8 +103,6 @@ input[type="number"],
 
 	select {
 		@include appearance(none);
-		-o-appearance: window;
-		-moz-appearance: window;
 		background-color: transparent;
 		line-height: 18px;
 		padding: 3px 14px;
